--- a/static/index.html
+++ b/static/index.html
@@ -61,6 +61,7 @@
         <script src="js/states/match.js"></script>
         <script src="js/states/score.js"></script>
 
+        <script src="js/outputs/audio.js"></script>
         <script src="js/outputs/console.js"></script>
 
         <script src="js/stateManager.js"></script>
