Stream audio Input and log rms

--- a/static/index.html
+++ b/static/index.html
@@ -61,6 +61,8 @@
         <script src="js/states/match.js"></script>
         <script src="js/states/score.js"></script>
 
+        <script src="js/inputs/audioDetect.js"></script>
+
         <script src="js/outputs/audio.js"></script>
         <script src="js/outputs/console.js"></script>
 
