--- a/static/index.html
+++ b/static/index.html
@@ -38,11 +38,13 @@
 
                 <div class="state" id="state_match">
                   Match
-                <div>
+
+                  <div class="football_field" id="field"></div>
+                </div>
 
                 <div class="state" id="state_end">
                   Match terminé !
-                <div>
+                </div>
 
             </div>
         </div>
@@ -50,6 +52,7 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/1.5.3/pixi.js"></script>
 
         <script src="data.js"></script>
 
@@ -65,6 +68,7 @@
 
         <script src="js/outputs/audio.js"></script>
         <script src="js/outputs/console.js"></script>
+        <script src="js/outputs/graphics.js"></script>
 
         <script src="js/stateManager.js"></script>
         <script src="js/simulator.js"></script>
