CapTure audio and say when there is a lot of noise

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,8 @@
                   Match
 
                   <div class="football_field" id="field"></div>
+                  <div class="audioBar"></div>
+                  <div class="audioVolume"></div>
                 </div>
 
                 <div class="state" id="state_end">
