--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/animation.css">
 
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -39,7 +40,9 @@
                 <div class="state" id="state_match">
                   Match
 
-                  <div class="football_field" id="field"></div>
+                  <div class="football_field" id="field">
+                    <div id="ball"></div>
+                  </div>
                   <div class="audioBar"></div>
                   <div class="audioVolume"></div>
                 </div>
