color and teams flags

--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,7 @@
                   Match
 
                   <div class="football_field" id="field">
+                    <div id="flagA"></div> <div id="flagB"></div>
                     <div id="ball"></div>
                   </div>
                   <div class="audioBar"></div>
