--- a/static/index.html
+++ b/static/index.html
@@ -3,25 +3,25 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Goooooooooooooooooal !</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/layout.css">
-        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/animation.css">
+        <link rel="stylesheet" href="css/layout.css">
 
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500,500italic,400italic,300italic,300|Roboto+Condensed:400,300,700|Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Goooooooooooooooooal!</h1>
+                <h1 class="title">Goooooooooooooooooal !</h1>
             </header>
         </div>
 
