--- a/static/home.html
+++ b/static/home.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="state" id="state_match">
-                  Match
+                  Match <span id="scoreTeam0">0</span>/<span id="scoreTeam1">0</span>
 
                   <div class="football_field" id="field">
                     <div id="flagA"></div> <div id="flagB"></div>
@@ -74,6 +74,7 @@
         <script src="js/outputs/audio.js"></script>
         <script src="js/outputs/console.js"></script>
         <script src="js/outputs/graphics.js"></script>
+        <script src="js/outputs/score.js"></script>
 
         <script src="js/stateManager.js"></script>
         <script src="js/simulator.js"></script>
