--- a/static/home.html
+++ b/static/home.html
@@ -44,7 +44,7 @@
                     <div id="flagA"></div> <div id="flagB"></div>
                     <span id="scoreTeam0">0</span>
                     <span id="scoreTeam1">0</span>
-                    <div id="ball"></div>
+                    <div id="ball" class="rotating"></div>
                   </div>
                   <div class="audioBar"></div>
                   <div class="audioVolume"></div>
