show image on goal

--- a/static/home.html
+++ b/static/home.html
@@ -45,6 +45,7 @@
                     <span id="scoreTeam0">0</span>
                     <span id="scoreTeam1">0</span>
                     <div id="ball" class="rotating"></div>
+                    <div id="image"></div>
                   </div>
                   <div class="audioBar"></div>
                   <div class="audioVolume"></div>
